# IIDEAA-Bench

./: .gitignore  README.md
ax_blackscholes/: iideaa-log
ax_blackscholes/bellerophon/: bellerophon_functions.cpp  compile_commands.json  gaconfig.param  launch.sh
ax_blackscholes/clang-chimera/: conf.csv  launch.sh
ax_blackscholes/clang-chimera/output/mutants/blackscholes.cpp/: report.csv
ax_blackscholes/clang-chimera/output/mutants/blackscholes.cpp/4/: blackscholes.cpp  vpa_n_float_report.csv
ax_blackscholes/clang-chimera/output/mutants/blackscholes.cpp/temp/: blackscholes.cpp
ax_blackscholes/src/: CMakeLists.txt  ast_blackscholes.cpp  blackscholes.cpp
ax_fft/: fft_log
ax_fft/bellerophon/: bellerophon_functions.cpp  compile_commands.json  gaconfig.param  launch.sh
ax_fft/clang-chimera/: conf.csv  launch.sh
ax_fft/clang-chimera/output/mutants/fourier.cpp/: report.csv
ax_fft/clang-chimera/output/mutants/fourier.cpp/4/: fourier.cpp  vpa_n_float_report.csv
ax_fft/src/: CMakeLists.txt  complex.cpp  fft.cpp  fft.hpp  fourier.cpp
ax_inversek2j/: logChimeraInverseK2J
ax_inversek2j/bellerophon/: bellerophon_functions.cpp  compile_commands.json  gaconfig.param  launch.sh
ax_inversek2j/clang-chimera/: conf.csv  launch.sh
ax_inversek2j/clang-chimera/output/mutants/kinematics.cpp/: report.csv
ax_inversek2j/clang-chimera/output/mutants/kinematics.cpp/4/: kinematics.cpp  vpa_n_float_report.csv
ax_inversek2j/src/: CMakeLists.txt  inversek2j.cpp  inversek2j.hpp  kinematics.cpp
ax_inversek2j/src_backup/: CMakeLists.txt
ax_jmeint/bellerophon/: bellerophon_functions.cpp  compile_commands.json  gaconfig.param  launch.sh
ax_jmeint/clang-chimera/: conf.csv  conf.csv.bk  launch.sh
ax_jmeint/src/: CMakeLists.txt  jmeint.cpp  jmeint.hpp  tritri.cpp
ax_jmeint/train.data/output/: jmeint_100K_jmeint_out.data  jmeint_10K_jmeint_out.data
ax_jpeg/bellerophon/: bellerophonLog  bellerophon_functions.cpp  compile_commands.json  gaconfig.param  launch.sh
ax_jpeg/clang-chimera/: conf.csv  launch.sh
ax_jpeg/src/: CMakeLists.txt  dct.cpp  encoder.cpp  huffman.cpp  jpeg.cpp  jpegloader.cpp  quant.cpp  vpa.h
ax_jpeg/src/include/: datatype.h  jpeg.h  jpegloader.h
ax_kmeans/bellerophon/: bellerophon_functions.cpp  compile_commands.json  compile_commands.json.bk  gaconfig.param  launch.sh
ax_kmeans/clang-chimera/: conf.csv  launch.sh
ax_kmeans/clang-chimera/output/mutants/distance.cpp/: report.csv
ax_kmeans/clang-chimera/output/mutants/distance.cpp/4/: distance.cpp  vpa_n_float_report.csv
ax_kmeans/clang-chimera/output/mutants/segmentation.cpp/: report.csv
ax_kmeans/clang-chimera/output/mutants/segmentation.cpp/1/: flap_float_report.csv  segmentation.cpp
ax_kmeans/clang-chimera/output/mutants/segmentation.cpp/4/: segmentation.cpp
ax_kmeans/src/: CMakeLists.txt  distance.cpp  kmeans.cpp  kmeans.h  rgbimage.cpp  segmentation.cpp
ax_kmeans/test.data/output/: tmp
ax_sobel/src/: CMakeLists.txt
ax_sobel/test.data/output/: 2_orig.rgb
fann_iideaa/datasets/: scaling.data
fann_iideaa/fann_mushroom/: testScript.sh
fann_iideaa/fann_mushroom/bellerophon/: bellerophon_functions.cpp  compile_commands.json  gaconfig.param  launch.sh  log0  log1  log2  log3  log4  mushroom_float.net
fann_iideaa/fann_mushroom/clang-chimera/: launch.sh
fann_iideaa/fann_mushroom/clang-chimera/output/mutants/fann_train.cpp/5/: vpa_float_report.csv
fann_iideaa/fann_mushroom/src/: CMakeLists.txt  mushroom.cpp
fann_iideaa/fann_mushroom/src/include/: mushroom.h  vpa_n.h
fann_iideaa/fann_robot/bellerophon/: robot_float.net
fann_iideaa/fann_robot/clang-chimera/: conf.csv
fann_iideaa/fann_robot/clang-chimera/output/mutants/fann_train.cpp/4/: fann_train.cpp
fann_iideaa/fann_robot/clang-chimera/output/mutants/fann_train.cpp/5/: fann_train.cpp
fann_iideaa/fann_robot/src/: CMakeLists.txt  fann_train.cpp  fann_train_data.cpp  robot.cpp
fann_iideaa/fann_robot/src/bellerophon/: bellerophon_functions.cpp  compile_commands.json  gaconfig.param  launch.sh
fann_iideaa/fann_robot/src/include/: robot.h
fann_iideaa/src/: robot_float.net
fann_iideaa/src/include/: floatfann.h
